[package]
name = "yew_app"
version = "0.1.0"
edition = "2021"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-router = "0.16.0"
yew = "0.19.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
stylist = {version = "0.10.1", features = ["yew"]}
web-sys = "0.3.58"
gloo-console = "0.2.1"
reqwasm ='0.5.0'
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.83"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"