[package]
name = "yew_app"
version = "0.3.0"
edition = "2021"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "yew_app"

[lib]
name = "yew_app_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-router = "0.19.0"
yew = { version = "0.22.0", features = ["csr"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
stylist = { version = "0.13.0", features = [
    "yew_integration",
    "yew_use_style",
] }
web-sys = {version ="0.3.70", features = [
  "HtmlElement",
  "CssStyleDeclaration"
]}
gloo-console = "0.3.0"
reqwasm = '0.5.0'
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
